--- a/ProjetTuteureClient/src/App.css
+++ b/ProjetTuteureClient/src/App.css
@@ -7,6 +7,20 @@ body {
   height: 100%;
 }
 
+.display-none{
+  display:none;
+}
+
+
+
+.wrapper-tasks-list{
+  grid-column: 1/5;
+  padding-top : 30px;
+  padding-bottom: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 #landing {
   display: flex;
   align-items: center;
@@ -51,7 +65,7 @@ button {
 
 .wrapper{
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 4fr;
 }
 
 .error {
@@ -142,10 +156,11 @@ button {
   grid-template-rows: repeat(10, 1fr);
   /*position: fixed;*/
   
-    max-width: 400px;
+    max-width: 350px;
     height: 100vh;
-  padding: 2rem 1rem;
+  padding: 2rem 0rem;
   padding-bottom: 1rem;
+  padding-left: 15px;
   background-color: #f5f5f5;
   /*background-color: #ffffff;*/
  /* overflow-y: auto;
@@ -162,11 +177,8 @@ button {
   /*position: fixed;
   display: flex;*/
   /*z-index: 1;*/
-  width:inherit;
-  min-width: 400px;
-left: 0;
-padding: 1rem 1rem;
-padding-top: 4rem;
+  display:grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 #user-email {
@@ -391,7 +403,7 @@ padding-top: 4rem;
   /*display: none;
   position: fixed;
   z-index: 3;*/
-  grid-column:3;
+  grid-column:5;
   max-width: 400px;
   background-color: #f5f5f5;
   border-left: 1px solid #bdbdbd;
@@ -460,6 +472,11 @@ button.optional {
 display: none;
   }
 */
+.content-full{
+  grid-column-start: 1;
+  grid-column-end: 6;
+
+}
 
 @media screen and (min-width: 1200px) {
   #navbar {
@@ -486,14 +503,6 @@ background-color: #f5f5f5;
 display: none;
   }
 
-  #content {
-  /*z-index: auto;*/
-  /*display: flex;*/
-  /*grid-column: 2 / 5;
-  width:inherit;*/
-  left: 400px;
-  padding: 1rem 1rem;
-  }
 
   #settings-title {
 display: block;
